updating & grouping requests